--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,14 @@ jobs:
           python-version: 3.10.13
       - name: Install dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
+            python -m venv venv
+            source venv/bin/activate
+            pip install -r requirements.txt
       - name: Run tests
         run: |
-          source venv/bin/activate
-          pytest -q
+            source venv/bin/activate
+            export PYTHONPATH=$PYTHONPATH:$(pwd)
+            pytest -q
       - name: Build Docker image
         run: docker build -t myapp:latest .
 
