--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - uses: actions/checkout@v3
@@ -36,19 +36,15 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+          pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Setup Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-          chrome-version: '117'
-
-      - name: Set DATABASE_URL
-        run: echo "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/taskmanager" >> $GITHUB_ENV
+          chrome-version: 'latest'
 
       - name: Run tests
-        env:
-          DATABASE_URL: ${{ env.DATABASE_URL }}
         run: |
           source venv/bin/activate
           export PYTHONPATH=$PYTHONPATH:$(pwd)
