--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,12 +42,13 @@ jobs:
       - name: Setup Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-            chrome-version: 'latest'
-
+            chrome-version: '114'
+            
       - name: Setup ChromeDriver
         uses: nanasess/setup-chromedriver@v1
         with:
-            chromedriver-version: 'latest'
+            chromedriver-version: '114.0.5735.90'
+
 
 
       - name: Run tests
