--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,12 @@ jobs:
 
       - name: Run tests
         run: |
-          source venv/bin/activate
-          export PYTHONPATH=$PYTHONPATH:$(pwd)
-          pytest -q
+            source venv/bin/activate
+            export PYTHONPATH=$PYTHONPATH:$(pwd)
+            nohup python app.py & 
+            sleep 2
+            pytest -q
+
 
       - name: Build Docker image
         run: docker build -t myapp:latest .
